[build-system]
requires = ["maturin>=1.9,<2"]
build-backend = "maturin"

[project]
name = "dua-py"
version = "0.1.0"
description = "Minimal Python bindings for dua-cli traversal trees"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Ohad Rubin" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: System :: Filesystems",
]

[project.urls]
Homepage = "https://github.com/ohadr/dua-py"
Source = "https://github.com/ohadr/dua-py"

[tool.maturin]
python-source = "python"
module-name = "dua_py._native"
features = ["pyo3/extension-module"]
